Implement Responsive image

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Favorite.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Favorite.html
@@ -2,7 +2,7 @@
     <ion-header-bar align-title="left" class="bar-positive">
         <div class="title">
             <h1 class="title row">
-                <span class="col-offset-10 col-10"><img class="" height="45" src="../../img/Logos/FcLogo.png" /></span><span class="title">เลือกทีมที่ชอบ</span>
+                <span class="col-offset-10 col-10"><img class="" height="45" src="img/Logos/FcLogox1.png" bh-src-responsive="[ [ 'small', 'img/Logos/FcLogox2.png' ], [ 'medium', 'img/Logos/FcLogox3.png' ], [ 'retina', 'img/Logos/FcLogox3.png' ] ]" /></span><span class="title">เลือกทีมที่ชอบ</span>
             </h1>
         </div>
 
