--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -11,8 +11,8 @@
         <ion-content has-header="true" padding="true">
             <div class="row row-center">
                 <div class="col col-center">
-                    <div class="">
-                        <img class=" col col-75 block-center" src="img/Logos/LogoLogin.png" />
+                    <div>
+                        <img class=" col col-75 block-center" src="img/Logos/LogoLoginx1.png" bh-src-responsive="[ [ 'small', 'img/Logos/LogoLoginx2.png' ], [ 'medium', 'img/Logos/LogoLoginx3.png' ], [ 'retina', 'img/Logos/LogoLoginx3.png' ] ]" />
                     </div>
                 </div>
             </div>
