--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
@@ -4,13 +4,13 @@
         <div ng-include src="'templates/Matches/_matchHeaderScore.html'"></div>
 
         <div class="item no-border" ng-show="matchCtrl.DisplayMatches.length == 0">
-            <img class="col" src="img/Logos/NoCompetition.png" />
+            <img class="col" src="img/Logos/NoCompetitionx1.png" bh-src-responsive="[ [ 'small', 'img/Logos/NoCompetitionx2.png' ], [ 'medium', 'img/Logos/NoCompetitionx3.png' ], [ 'retina', 'img/Logos/NoCompetitionx3.png' ] ]" />
         </div>
         
         <ion-list ng-show="matchCtrl.DisplayMatches.length != 0">
             <ion-item class="item item-divider no-border bg-gray text-center">
             <div class="item-icon-left">
-                <i class="icon"><img class="" src="img/Logos/Flag-ENGx1.png" /></i>
+                <i class="icon"><img height="20" src="img/Logos/Flag-ENGx1.png" bh-src-responsive="[ [ 'small', 'img/Logos/Flag-ENGx2.png' ], [ 'medium', 'img/Logos/Flag-ENGx3.png' ], [ 'retina', 'img/Logos/Flag-ENGx3.png' ] ]"/></i>
                 
             </div>
                  อังกฤษ พรีเมียร์ลีก
