--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/_matchHeaderScore.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/_matchHeaderScore.html
@@ -2,7 +2,7 @@
     <a menu-close href="#/rewards/rewards" class="button-small button bg-yellow row">
         <div class="col col-10 col-center">
             <i>
-                <img src="img/Icons/Star.png" height="25" />
+                <img src="img/Icons/Starx1.png" height="25" bh-src-responsive="[ [ 'small', 'img/Icons/Starx2.png' ], [ 'medium', 'img/Icons/Starx3.png' ], [ 'retina', 'img/Icons/Starx3.png' ] ]" />
             </i>
         </div>
         <span class="col col-center text-left font-large">
