--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/Rewards.html
@@ -38,7 +38,7 @@
         <!-- No Reward -->
         <div class="item no-border text-right" ng-show="rewardCtrl.RewardInfo.Rewards.length == 0">
             <div>
-                <img class="col" src="img/Logos/NoReward.png" />
+                <img class="col" src="img/Logos/NoRewardx1.png" bh-src-responsive="[ [ 'small', 'img/Logos/NoRewardx2.png' ], [ 'medium', 'img/Logos/NoRewardx3.png' ], [ 'retina', 'img/Logos/NoRewardx3.png' ] ]"/>
             </div>
         </div>
     </ion-content>
