--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/UnderConstruction.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/UnderConstruction.html
@@ -2,7 +2,7 @@
     <ion-content>
         <ion-item class="item no-border">
 
-            <img class="col" src="../img/Logos/Underconstruction.png" />
+            <img class="col" src="img/Logos/Underconstructionx1.png" bh-src-responsive="[ [ 'small', 'img/Logos/Underconstructionx2.png' ], [ 'medium', 'img/Logos/Underconstructionx3.png' ], [ 'retina', 'img/Logos/Underconstructionx3.png' ] ]"/>
         </ion-item>
        
     </ion-content>
