--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/_matchHeaderAds.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/_matchHeaderAds.html
@@ -1,3 +1,3 @@
 ﻿<div>
-    <img class="col no-padding" src="img/Logos/Banner.png" />
+    <img class="col no-padding" src="img/Logos/Bannerx1.png" bh-src-responsive="[ [ 'small', 'img/Logos/Bannerx2.png' ], [ 'medium', 'img/Logos/Bannerx3.png' ], [ 'retina', 'img/Logos/Bannerx3.png' ] ]" />
 </div>
