--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/RewardWinner.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/RewardWinner.html
@@ -6,10 +6,11 @@
                 <b>
                     รางวัลที่ {{reward.Ordering}}
                 </b>
-                <br />
-                <b>
-                    {{reward.Description}}
-                </b>
+                <h2>
+                    <b>
+                        {{reward.Description}}
+                    </b>
+                </h2>
             </div>
             <div>
                 <p ng-show="reward.Winners.length==0">
@@ -30,7 +31,7 @@
         <!-- ไม่มีรางวัล -->
         <div class="item no-border text-right" ng-show="rewardCtrl.WinnersInfo.Winners.length==0">
             <div>
-                <img class="col" src="img/Logos/NoReward.png" />
+                <img class="col" src="img/Logos/NoRewardx1.png" bh-src-responsive="[ [ 'small', 'img/Logos/NoRewardx2.png' ], [ 'medium', 'img/Logos/NoRewardx3.png' ], [ 'retina', 'img/Logos/NoRewardx3.png' ] ]"/>
             </div>
         </div>
     </ion-content>
