--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -2,7 +2,7 @@
     <ion-header-bar class="bar-dark row">
         <div class="col col-10 col-center">
             <i>
-                <img src="img/Icons/StarWhite.png" height="20" />
+                <img src="img/Icons/StarWhitex1.png" height="20" bh-src-responsive="[ [ 'small', 'img/Icons/StarWhitex2.png' ], [ 'medium', 'img/Icons/StarWhitex3.png' ], [ 'retina', 'img/Icons/StarWhitex3.png' ] ]"/>
             </i>
         </div>
         <div class="col col-center">
@@ -19,7 +19,7 @@
             <ion-item menu-close href="#/matches/todaymatches" class="item-royal ">
                 <div class="text-gray">
                     <i>
-                        <img class="vertical-middle"  src="img/Icons/MenuIcon1.png" />
+                        <img class="vertical-middle" height="36"  src="img/Icons/MenuIcon1x1.png" bh-src-responsive="[ [ 'small', 'img/Icons/MenuIcon1x2.png' ], [ 'medium', 'img/Icons/MenuIcon1x3.png' ], [ 'retina', 'img/Icons/MenuIcon1x3.png' ] ]"/>
                     </i>
                     <span class="vertical-middle">
                         ตารางแข่งขัน
@@ -29,7 +29,7 @@
             <ion-item menu-close href="#/underconstruction/underconstruction" class="item-royal">
                 <div class="text-gray">
                     <i >
-                        <img class="vertical-middle" src="img/Icons/MenuIcon2.png" />
+                        <img class="vertical-middle" height="36" src="img/Icons/MenuIcon2x1.png" bh-src-responsive="[ [ 'small', 'img/Icons/MenuIcon2x2.png' ], [ 'medium', 'img/Icons/MenuIcon2x3.png' ], [ 'retina', 'img/Icons/MenuIcon2x3.png' ] ]"/>
                     </i>
                     <span class="vertical-middle">
                         ทีมและลีค
@@ -39,7 +39,7 @@
             <ion-item menu-close href="#/history/historybymonth" class="item-royal">
                 <div class="text-gray">
                     <i >
-                        <img class="vertical-middle" src="img/Icons/MenuIcon3.png" />
+                        <img class="vertical-middle" height="36" src="img/Icons/MenuIcon3x1.png" bh-src-responsive="[ [ 'small', 'img/Icons/MenuIcon3x2.png' ], [ 'medium', 'img/Icons/MenuIcon3x3.png' ], [ 'retina', 'img/Icons/MenuIcon3x3.png' ] ]"/>
                     </i>
                     <span class="vertical-middle" >
                         สถิติการทายผล
@@ -49,7 +49,7 @@
             <ion-item menu-close ng-click="login()" class="item-royal" href="#/underconstruction/underconstruction">
                 <div class="text-gray">
                     <i >
-                        <img class="vertical-middle" src="img/Icons/MenuIcon4.png" />
+                        <img class="vertical-middle" height="36" src="img/Icons/MenuIcon4x1.png" bh-src-responsive="[ [ 'small', 'img/Icons/MenuIcon4x2.png' ], [ 'medium', 'img/Icons/MenuIcon4x3.png' ], [ 'retina', 'img/Icons/MenuIcon4x3.png' ] ]"/>
                     </i>
                     <span class="vertical-middle">
                         ตั้งค่า
@@ -60,7 +60,7 @@
             <ion-item menu-close href="#" class="item-royal" ng-click="matchCtrl.Logout()">
                 <div class="text-gray">
                     <i>
-                        <img class="vertical-middle" src="img/Icons/MenuIcon5.png" />
+                        <img class="vertical-middle"  height="36" src="img/Icons/MenuIcon5x1.png" bh-src-responsive="[ [ 'small', 'img/Icons/MenuIcon5x2.png' ], [ 'medium', 'img/Icons/MenuIcon5x3.png' ], [ 'retina', 'img/Icons/MenuIcon5x3.png' ] ]"/>
                     </i>
                     <span class="vertical-middle">
                         ออกจากระบบ
@@ -74,7 +74,7 @@
                 <a menu-close class="button button-block button-balanced " href="#/underconstruction/underconstruction">
                     <div class="padding">
                         <h2 class="text-white">
-                            <img height="40" src="img/Icons/Playgame.png" />
+                            <img height="40" src="img/Icons/Playgamex1.png" bh-src-responsive="[ [ 'small', 'img/Icons/Playgamex2.png' ], [ 'medium', 'img/Icons/Playgamex3.png' ], [ 'retina', 'img/Icons/Playgamex3.png' ] ]"/>
                             เล่นเกมส์
                         </h2>
                     </div>
