--- a/src/DailySoccerSolution/DailySoccerMobile/www/css/ionic.app.css
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/css/ionic.app.css
@@ -9197,7 +9197,7 @@ a {
   display: inherit; }
 
 .bar .button {
-  padding: 8px 8px; }
+  padding: 8px 8px !important; }
 
 .soccer-number {
   position: absolute;
@@ -9255,7 +9255,7 @@ hr {
   display: inherit; }
 
 .bar .button {
-  padding: 8px 8px; }
+  padding: 8px 8px !important; }
 
 .tabs-dark.tabs-top.tabs-striped .tab-item.tab-item-active, .tabs-dark.tabs-top.tabs-striped .tab-item.active, .tabs-dark.tabs-top.tabs-striped .tab-item.activated {
   background: #4d4d4d; }
@@ -9475,3 +9475,9 @@ div.title.title-center div {
 .box-score {
   height: 52px;
   margin: 0; }
+
+.previous-title {
+  display: none !important; }
+
+ion-footer-bar {
+  border: none; }
