--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -1,4 +1,4 @@
-﻿<ion-side-menu side="right" class="side-menu">
+﻿<ion-side-menu side="right" class="side-menu" ng-controller="starter.sidemenu.SideMenuController">
     <ion-header-bar class="bar-dark row">
         <div class="col col-10 col-center">
             <i>
