--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -1,4 +1,4 @@
-﻿<ion-side-menu side="right" class="side-menu" ng-controller="starter.sidemenu.SideMenuController">
+﻿<ion-side-menu side="right" class="side-menu" ng-controller="starter.sidemenu.SideMenuController as sidemenuCtrl">
     <ion-header-bar class="bar-dark row">
         <div class="col col-10 col-center">
             <i>
@@ -57,7 +57,7 @@
                 </div>
                 
             </ion-item>
-            <ion-item menu-close href="#" class="item-royal" ng-click="matchCtrl.Logout()">
+            <ion-item menu-close href="#" class="item-royal" ng-click="matchCtrl.Logout()" ng-show="sidemenuCtrl.isLogedin">
                 <div class="text-gray">
                     <i>
                         <img class="vertical-middle"  height="36" src="img/Icons/MenuIcon5x1.png" bh-src-responsive="[ [ 'small', 'img/Icons/MenuIcon5x2.png' ], [ 'medium', 'img/Icons/MenuIcon5x3.png' ], [ 'retina', 'img/Icons/MenuIcon5x3.png' ] ]"/>
@@ -68,7 +68,7 @@
                 </div>                
             </ion-item>
 
-            <a class="button button-block bg-gray text-dark" href="#" ng-click="matchCtrl.LoginWithFacebook()">เข้าสู่ระบบ</a>
+            <a ng-hide="sidemenuCtrl.isLogedin" class="button button-block bg-gray text-dark" href="#" ng-click="accountCtrl.LoginWithFacebook()">เข้าสู่ระบบ</a>
 
             <div class="space-top">
                 <a menu-close class="button button-block button-balanced " href="#/underconstruction/underconstruction">
