fix historyByDay page
Signed-off-by: Anawat <m.anawat@outlook.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByDay.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByDay.html
@@ -62,8 +62,7 @@
                      'item-calm': match.TeamAway.IsSelected && !match.CompletedDate,
                      'item-balanced': match.TeamAway.IsSelected && match.CompletedDate && match.TeamHome.CurrentScore < match.TeamAway.CurrentScore,
                      'item-royal': match.TeamAway.IsSelected && match.CompletedDate && match.TeamHome.CurrentScore > match.TeamAway.CurrentScore,
-                     'item-draw-status': match.TeamAway.IsSelected && match.CompletedDate && match.TeamHome.CurrentScore == match.TeamAway.CurrentScore}"
-                     ng-click="match.CompletedDate || !matchCtrl.IsTodayMatch(match) || matchCtrl.SelectTeam(match, match.TeamAway.Id)">
+                     'item-draw-status': match.TeamAway.IsSelected && match.CompletedDate && match.TeamHome.CurrentScore == match.TeamAway.CurrentScore}">
                             <span class="status status-right bg-yellow" ng-show="match.CompletedDate && match.TeamAway.IsSelected && match.TeamHome.CurrentScore <= match.TeamAway.CurrentScore">+{{ match.TeamAway.WinningPredictionPoints }}</span>
                             <span class="status status-right bg-red" ng-show="match.CompletedDate && match.TeamAway.IsSelected && match.TeamHome.CurrentScore > match.TeamAway.CurrentScore">L</span>
                             <div class="text-left row row-center no-padding">
