--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/TieFacebookPopup.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/TieFacebookPopup.html
@@ -6,7 +6,7 @@
         <div class="row row-center">
             <div class="col col-center">
                 <div class="padding-bottom">
-                    <a class="button button-small block-center col button-calm" href="#/syncdata/syncdata" ng-click="TieFacebookPopup.hide()">ลงทะเบียนผ่าน Facebook</a>
+                    <a class="button button-small block-center col button-calm" ng-click="sidemenuCtrl.LoginWithFacebook()">ลงทะเบียนผ่าน Facebook</a>
                 </div>
                 <div>
                     <button class="button button-small block-center col button-royal" ng-click="TieFacebookPopup.hide()">ยกเลิก</button>
