Implement BuyTicket method for BuyTicket html page Add BuyTicketController Add starter.ticket.models Add starter.ticket.services Improve display month on TodayMatches html page
Signed-off-by: Earn <earndarkness@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/TodayMatches.html
@@ -1,4 +1,4 @@
-﻿<ion-view view-title="DAILY SOCCER<br><div>พฤษจิกายน</div>">
+﻿<ion-view view-title="DAILY SOCCER<br><div> {{ matchCtrl.CurrentDate | date: 'MMMM' }} </div>">
     <ion-content class="has-subheader today-match">
         <div ng-include src="'templates/Matches/_matchHeaderAds.html'"></div>
         <div ng-include src="'templates/Matches/_matchHeaderScore.html'"></div>
