Implement tiefacebook service
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/SyncData.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/SyncData.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <div class="col col-67 block-center">
-                <a class="col button button-block button-calm button-small">ข้อมูลจาก Facebook</a>
+                <a class="col button button-block button-calm button-small" ng-click="accountCtrl.TieFacbookWithFacebookData()">ข้อมูลจาก Facebook</a>
                 <div class="col">
                     ข้อมูลที่อยู่ใน Facebook จะถูกใช้แทนข้อมูลที่อยู่ในเครื่อง
                 </div>
@@ -22,7 +22,7 @@
         <br />
         <div class="row">
             <div class="col col-67 block-center">
-                <a class="col button button-block button-balanced button-small">ข้อมูลที่อยู่ในเครื่อง</a>
+                <a class="col button button-block button-balanced button-small" ng-click="accountCtrl.TieFacbookWithLocalData()">ข้อมูลที่อยู่ในเครื่อง</a>
                 <div class="col">
                     ใช้ข้อมูลที่มีอยู่ในเครื่อง
                 </div>
