Fix tie with Facebook for Buy ticket.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketPopup.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketPopup.html
@@ -6,7 +6,7 @@
         <div class="row row-center">
             <div class="col col-center">
                 <div class="">
-                    <button class="button button-small block-center col col-50 button-royal" ng-click="MatchPopup.hide()">ระบุใหม่</button>
+                    <button class="button button-small block-center col col-50 button-royal" ng-click="ErrorPopup.hide()">ระบุใหม่</button>
                 </div>
             </div>
         </div>
