--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
@@ -3,10 +3,10 @@
         <br />
         <div class="col col-80 col-offset-10">
             <p>
-                แต้มสะสมทั้งหมด {{ ticketCtrl.accountSvc.CurrentPoints }} คะแนน
+                แต้มสะสมทั้งหมด {{ sidemenuCtrl.accountSvc.CurrentPoints }} คะแนน
             </p>
             <p>
-                แลกคูปองได้สูงสุด {{ ticketCtrl.accountSvc.CurrentPoints / ticketCtrl.accountSvc.CurrentTicketCost | number : 0 }} ใบ
+                แลกคูปองได้สูงสุด {{ sidemenuCtrl.accountSvc.CurrentPoints / sidemenuCtrl.accountSvc.CurrentTicketCost | number : 0 }} ใบ
             </p>            
         </div>
         <br />
@@ -20,7 +20,7 @@
                 </p>
             </div>
             <div class="col row">
-                <div class="button bg-yellow col col-50 button-small block-center" ng-click="ticketCtrl.BuyTicket(amountCoupon)">
+                <div class="button bg-yellow col col-50 button-small block-center" ng-click="sidemenuCtrl.BuyTicket(amountCoupon)">
                     ส่งคูปองลุ้นรางวัล
                 </div>
             </div>
