--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketCompleted.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketCompleted.html
@@ -7,7 +7,7 @@
             {{ ticketCtrl.RemainingPoints }} แต้ม
         </p>
         <br />
-        <p>รอประกาศผลรายชื่อผู้โชคดี <br /> ในวันที่ {{ ticketCtrl.ExpiredDate }} <br /> ขอบพระคุณที่ร่วมสนุกกับเรา</p>
+        <p>รอประกาศผลรายชื่อผู้โชคดี <br /> ในวันที่ {{ ticketCtrl.ExpiredDate | date: 'longDate' }} <br /> ขอบพระคุณที่ร่วมสนุกกับเรา</p>
     </ion-content>
     <ion-footer-bar align-title="left" class="bar-balanced">
         <h1 class="title text-right">
