Fix bug for phone verification complete.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/VerifyCode.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/VerifyCode.html
@@ -8,7 +8,7 @@
                     </i>
                     <br />
                     <i class="font-large">
-                        087-1254896
+                        {{ accountCtrl.$stateParams.phoneNumber }}
                     </i>
                 </span>
             </div>
