--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/VerifyPhoneNumber.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/VerifyPhoneNumber.html
@@ -13,7 +13,7 @@
                     </p>
                 </div>
                 <div class="col col-67 block-center row">
-                    <div class="button button-balanced col col-50 col-offset-50 button-small ng-click="accountCtrl.SendRequestVerifyPhoneNumber(phoneNumber)">
+                    <div class="button button-balanced col col-50 col-offset-50 button-small" ng-click="accountCtrl.SendRequestVerifyPhoneNumber(phoneNumber)">
                         รับรหัสผ่าน
                     </div>
                 </div>
