Config sidemenu not store cache
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -1,4 +1,4 @@
-﻿<ion-side-menu side="right" class="side-menu" ng-controller="starter.sidemenu.SideMenuController as sidemenuCtrl">
+﻿<ion-side-menu side="right" class="side-menu" cache-view="false" ng-controller="starter.sidemenu.SideMenuController as sidemenuCtrl">
     <ion-header-bar class="bar-dark row">
         <div class="col col-10 col-center">
             <i>
