Fix Icon image path

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
@@ -3,7 +3,7 @@
         <ion-nav-bar class="bar-balanced" align-title="center">
             <ion-nav-buttons side="left">
                 <div class="button">
-                    <img width="35" height="35" src="img/Icons/Trophyx1.png" bh-src-responsive="[ [ 'small', 'img/Icons/Trophyx2.png' ], [ 'medium', 'img/Icons/Trophyx3.png' ], [ 'retina', 'img/Logos/img/Icons/Trophyx3.png' ] ]"/>
+                    <img width="35" height="35" src="img/Icons/Trophyx1.png" bh-src-responsive="[ [ 'small', 'img/Icons/Trophyx2.png' ], [ 'medium', 'img/Icons/Trophyx3.png' ], [ 'retina', 'img/Icons/Trophyx3.png' ] ]"/>
                     <div class="soccer-number">
                         {{ matchCtrl.RemainingGuessAmount }}
                     </div>
