Display account point on side-menu
Signed-off-by: Earn <earndarkness@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -6,7 +6,7 @@
             </i>
         </div>
         <div class="col col-center">
-            แต้มสะสม 7500
+            แต้มสะสม {{ sidemenuCtrl.AccountManagementService.CurrentPoints }}
         </div>
         <div class="col col-center">
                 <a menu-close href="#/rewards/rewards" class="button-small block button bg-yellow">
