Implement sidemenu logout
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -57,7 +57,7 @@
                 </div>
                 
             </ion-item>
-            <ion-item menu-close href="#" class="item-royal" ng-click="matchCtrl.Logout()" ng-show="sidemenuCtrl.isLogedin">
+            <ion-item menu-close href="#" class="item-royal" ng-click="sidemenuCtrl.Logout()" ng-show="sidemenuCtrl.isLogedin">
                 <div class="text-gray">
                     <i>
                         <img class="vertical-middle"  height="36" src="img/Icons/MenuIcon5x1.png" bh-src-responsive="[ [ 'small', 'img/Icons/MenuIcon5x2.png' ], [ 'medium', 'img/Icons/MenuIcon5x3.png' ], [ 'retina', 'img/Icons/MenuIcon5x3.png' ] ]"/>
