Change account management service.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -1,4 +1,4 @@
-﻿<ion-view class="bg-main scroll-middle">
+﻿<ion-view class="bg-main scroll-middle" ng-init="accountCtrl.CheckLocalStorageAccount()">
         <!--<div class="row row-center">
             <div class="col col-center">
                 <div class="space-top">
