Change display account's points.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
@@ -3,10 +3,10 @@
         <br />
         <div class="col col-80 col-offset-10">
             <p>
-                แต้มสะสมทั้งหมด {{ sidemenuCtrl.accountSvc.CurrentPoints }} คะแนน
+                แต้มสะสมทั้งหมด {{ sidemenuCtrl.accountSvc.GetAccountInformation().Points }} คะแนน
             </p>
             <p>
-                แลกคูปองได้สูงสุด {{ sidemenuCtrl.accountSvc.CurrentPoints / sidemenuCtrl.accountSvc.CurrentTicketCost | number : 0 }} ใบ
+                แลกคูปองได้สูงสุด {{ sidemenuCtrl.accountSvc.GetAccountInformation().Points / sidemenuCtrl.accountSvc.CurrentTicketCost | number : 0 }} ใบ
             </p>            
         </div>
         <br />
