--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -6,7 +6,7 @@
             </i>
         </div>
         <div class="col col-center">
-            แต้มสะสม {{ sidemenuCtrl.AccountManagementService.CurrentPoints }}
+            แต้มสะสม {{ sidemenuCtrl.AccountManagementService.GetAccountInformation().Points }}
         </div>
         <div class="col col-center">
                 <a menu-close href="#/rewards/rewards" class="button-small block button bg-yellow">
